sumo/tests/sumo/errors/unsafe_connections/errors.sumo
Warning: Lane 'gneE1_0' is approached multiple times from edge 'gneE0'. This may cause collisions.
